gofd/gnfdParser.py
# Generated from gnfd.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gnfdParser ( Parser ):

    grammarFileName = "gnfd.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&'", "':'", "','", "'-'", "'=>'", "'.'", 
                     "<INVALID>", "'<'", "'['", "'('", "'>'", "']'", "')'" ]

    symbolicNames = [ "<INVALID>", "AMPERSAND", "COLON", "COMMA", "DASH", 
                      "DETERMINES", "DOT", "IDENTIFIER", "LANGLE", "LBRACK", 
                      "LPAR", "RANGLE", "RBRACK", "RPAR" ]

    RULE_dependency = 0
    RULE_left = 1
    RULE_right = 2
    RULE_reference = 3
    RULE_property = 4
    RULE_pattern = 5
    RULE_labelList = 6
    RULE_propertyList = 7
    RULE_label = 8
    RULE_varName = 9
    RULE_propertyKey = 10
    RULE_nodePattern = 11

    ruleNames =  [ "dependency", "left", "right", "reference", "property", 
                   "pattern", "labelList", "propertyList", "label", "varName", 
                   "propertyKey", "nodePattern" ]

    EOF = Token.EOF
    AMPERSAND=1
    COLON=2
    COMMA=3
    DASH=4
    DETERMINES=5
    DOT=6
    IDENTIFIER=7
    LANGLE=8
    LBRACK=9
    LPAR=10
    RANGLE=11
    RBRACK=12
    RPAR=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DependencyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self):
            return self.getTypedRuleContext(gnfdParser.PatternContext,0)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(gnfdParser.COLON)
            else:
                return self.getToken(gnfdParser.COLON, i)

        def left(self):
            return self.getTypedRuleContext(gnfdParser.LeftContext,0)


        def DETERMINES(self):
            return self.getToken(gnfdParser.DETERMINES, 0)

        def right(self):
            return self.getTypedRuleContext(gnfdParser.RightContext,0)


        def EOF(self):
            return self.getToken(gnfdParser.EOF, 0)

        def getRuleIndex(self):
            return gnfdParser.RULE_dependency

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDependency" ):
                listener.enterDependency(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDependency" ):
                listener.exitDependency(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDependency" ):
                return visitor.visitDependency(self)
            else:
                return visitor.visitChildren(self)




    def dependency(self):

        localctx = gnfdParser.DependencyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dependency)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.pattern(0)
            self.state = 25
            self.match(gnfdParser.COLON)
            self.state = 26
            self.match(gnfdParser.COLON)
            self.state = 27
            self.left()
            self.state = 28
            self.match(gnfdParser.DETERMINES)
            self.state = 29
            self.right()
            self.state = 30
            self.match(gnfdParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeftContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gnfdParser.ReferenceContext)
            else:
                return self.getTypedRuleContext(gnfdParser.ReferenceContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gnfdParser.COMMA)
            else:
                return self.getToken(gnfdParser.COMMA, i)

        def getRuleIndex(self):
            return gnfdParser.RULE_left

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeft" ):
                listener.enterLeft(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeft" ):
                listener.exitLeft(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeft" ):
                return visitor.visitLeft(self)
            else:
                return visitor.visitChildren(self)




    def left(self):

        localctx = gnfdParser.LeftContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_left)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.reference()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 33
                self.match(gnfdParser.COMMA)
                self.state = 34
                self.reference()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RightContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gnfdParser.ReferenceContext)
            else:
                return self.getTypedRuleContext(gnfdParser.ReferenceContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gnfdParser.COMMA)
            else:
                return self.getToken(gnfdParser.COMMA, i)

        def getRuleIndex(self):
            return gnfdParser.RULE_right

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRight" ):
                listener.enterRight(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRight" ):
                listener.exitRight(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRight" ):
                return visitor.visitRight(self)
            else:
                return visitor.visitChildren(self)




    def right(self):

        localctx = gnfdParser.RightContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_right)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.reference()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 41
                self.match(gnfdParser.COMMA)
                self.state = 42
                self.reference()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(gnfdParser.VarNameContext,0)


        def property_(self):
            return self.getTypedRuleContext(gnfdParser.PropertyContext,0)


        def getRuleIndex(self):
            return gnfdParser.RULE_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference" ):
                listener.enterReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference" ):
                listener.exitReference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReference" ):
                return visitor.visitReference(self)
            else:
                return visitor.visitChildren(self)




    def reference(self):

        localctx = gnfdParser.ReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_reference)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.varName()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.property_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(gnfdParser.VarNameContext,0)


        def DOT(self):
            return self.getToken(gnfdParser.DOT, 0)

        def propertyKey(self):
            return self.getTypedRuleContext(gnfdParser.PropertyKeyContext,0)


        def getRuleIndex(self):
            return gnfdParser.RULE_property

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty" ):
                listener.enterProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty" ):
                listener.exitProperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProperty" ):
                return visitor.visitProperty(self)
            else:
                return visitor.visitChildren(self)




    def property_(self):

        localctx = gnfdParser.PropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_property)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.varName()
            self.state = 53
            self.match(gnfdParser.DOT)
            self.state = 54
            self.propertyKey()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodePattern(self):
            return self.getTypedRuleContext(gnfdParser.NodePatternContext,0)


        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gnfdParser.PatternContext)
            else:
                return self.getTypedRuleContext(gnfdParser.PatternContext,i)


        def LANGLE(self):
            return self.getToken(gnfdParser.LANGLE, 0)

        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(gnfdParser.DASH)
            else:
                return self.getToken(gnfdParser.DASH, i)

        def LBRACK(self):
            return self.getToken(gnfdParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(gnfdParser.RBRACK, 0)

        def varName(self):
            return self.getTypedRuleContext(gnfdParser.VarNameContext,0)


        def labelList(self):
            return self.getTypedRuleContext(gnfdParser.LabelListContext,0)


        def COLON(self):
            return self.getToken(gnfdParser.COLON, 0)

        def propertyList(self):
            return self.getTypedRuleContext(gnfdParser.PropertyListContext,0)


        def RANGLE(self):
            return self.getToken(gnfdParser.RANGLE, 0)

        def COMMA(self):
            return self.getToken(gnfdParser.COMMA, 0)

        def getRuleIndex(self):
            return gnfdParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPattern" ):
                return visitor.visitPattern(self)
            else:
                return visitor.visitChildren(self)



    def pattern(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gnfdParser.PatternContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_pattern, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.nodePattern()
            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = gnfdParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 59
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 60
                        self.match(gnfdParser.LANGLE)
                        self.state = 61
                        self.match(gnfdParser.DASH)
                        self.state = 62
                        self.match(gnfdParser.LBRACK)
                        self.state = 64
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==7:
                            self.state = 63
                            self.varName()


                        self.state = 72
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                        if la_ == 1:
                            self.state = 66
                            self.labelList()
                            self.state = 68
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==2:
                                self.state = 67
                                self.propertyList()



                        elif la_ == 2:
                            self.state = 70
                            self.match(gnfdParser.COLON)
                            self.state = 71
                            self.propertyList()


                        self.state = 74
                        self.match(gnfdParser.RBRACK)
                        self.state = 75
                        self.match(gnfdParser.DASH)
                        self.state = 76
                        self.pattern(4)
                        pass

                    elif la_ == 2:
                        localctx = gnfdParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 77
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 78
                        self.match(gnfdParser.DASH)
                        self.state = 79
                        self.match(gnfdParser.LBRACK)
                        self.state = 81
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==7:
                            self.state = 80
                            self.varName()


                        self.state = 89
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                        if la_ == 1:
                            self.state = 83
                            self.labelList()
                            self.state = 85
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==2:
                                self.state = 84
                                self.propertyList()



                        elif la_ == 2:
                            self.state = 87
                            self.match(gnfdParser.COLON)
                            self.state = 88
                            self.propertyList()


                        self.state = 91
                        self.match(gnfdParser.RBRACK)
                        self.state = 92
                        self.match(gnfdParser.DASH)
                        self.state = 93
                        self.match(gnfdParser.RANGLE)
                        self.state = 94
                        self.pattern(3)
                        pass

                    elif la_ == 3:
                        localctx = gnfdParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 95
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 96
                        self.match(gnfdParser.COMMA)
                        self.state = 97
                        self.pattern(2)
                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LabelListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(gnfdParser.COLON, 0)

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gnfdParser.LabelContext)
            else:
                return self.getTypedRuleContext(gnfdParser.LabelContext,i)


        def AMPERSAND(self, i:int=None):
            if i is None:
                return self.getTokens(gnfdParser.AMPERSAND)
            else:
                return self.getToken(gnfdParser.AMPERSAND, i)

        def getRuleIndex(self):
            return gnfdParser.RULE_labelList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelList" ):
                listener.enterLabelList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelList" ):
                listener.exitLabelList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelList" ):
                return visitor.visitLabelList(self)
            else:
                return visitor.visitChildren(self)




    def labelList(self):

        localctx = gnfdParser.LabelListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_labelList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(gnfdParser.COLON)
            self.state = 104
            self.label()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 105
                self.match(gnfdParser.AMPERSAND)
                self.state = 106
                self.label()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(gnfdParser.COLON, 0)

        def propertyKey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gnfdParser.PropertyKeyContext)
            else:
                return self.getTypedRuleContext(gnfdParser.PropertyKeyContext,i)


        def AMPERSAND(self, i:int=None):
            if i is None:
                return self.getTokens(gnfdParser.AMPERSAND)
            else:
                return self.getToken(gnfdParser.AMPERSAND, i)

        def getRuleIndex(self):
            return gnfdParser.RULE_propertyList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyList" ):
                listener.enterPropertyList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyList" ):
                listener.exitPropertyList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyList" ):
                return visitor.visitPropertyList(self)
            else:
                return visitor.visitChildren(self)




    def propertyList(self):

        localctx = gnfdParser.PropertyListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_propertyList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(gnfdParser.COLON)
            self.state = 113
            self.propertyKey()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 114
                self.match(gnfdParser.AMPERSAND)
                self.state = 115
                self.propertyKey()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(gnfdParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return gnfdParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = gnfdParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(gnfdParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(gnfdParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return gnfdParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarName" ):
                return visitor.visitVarName(self)
            else:
                return visitor.visitChildren(self)




    def varName(self):

        localctx = gnfdParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(gnfdParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(gnfdParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return gnfdParser.RULE_propertyKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyKey" ):
                listener.enterPropertyKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyKey" ):
                listener.exitPropertyKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyKey" ):
                return visitor.visitPropertyKey(self)
            else:
                return visitor.visitChildren(self)




    def propertyKey(self):

        localctx = gnfdParser.PropertyKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_propertyKey)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(gnfdParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodePatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(gnfdParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(gnfdParser.RPAR, 0)

        def varName(self):
            return self.getTypedRuleContext(gnfdParser.VarNameContext,0)


        def labelList(self):
            return self.getTypedRuleContext(gnfdParser.LabelListContext,0)


        def COLON(self):
            return self.getToken(gnfdParser.COLON, 0)

        def propertyList(self):
            return self.getTypedRuleContext(gnfdParser.PropertyListContext,0)


        def getRuleIndex(self):
            return gnfdParser.RULE_nodePattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodePattern" ):
                listener.enterNodePattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodePattern" ):
                listener.exitNodePattern(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodePattern" ):
                return visitor.visitNodePattern(self)
            else:
                return visitor.visitChildren(self)




    def nodePattern(self):

        localctx = gnfdParser.NodePatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_nodePattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(gnfdParser.LPAR)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 128
                self.varName()


            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 131
                self.labelList()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 132
                    self.propertyList()



            elif la_ == 2:
                self.state = 135
                self.match(gnfdParser.COLON)
                self.state = 136
                self.propertyList()


            self.state = 139
            self.match(gnfdParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.pattern_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def pattern_sempred(self, localctx:PatternContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 1)
         




